@@ -1,3 +1,7 @@
+2007-09-21  Badlop  <badlop@ono.com>
+
+	* src/mod_webpresence.erl: Better i18n support.
+
 2007-08-31  Badlop  <badlop@ono.com>
 
 	* src/mod_webpresence.erl: Escape ' in status message. Fix bug while cheking jidurl and ridurl options. Small fix in PHP example.
